--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 82acfa7
+	base = 9f410e1
 	trimbase = 
 	parent = debian/indigo/turtlebot_concert
-	previous = 
+	previous = 82acfa7
