--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0707b18
+	base = aa18588
 	trimbase = 
 	parent = release/indigo/turtlebot_concert
-	previous = 
+	previous = 0707b18
