--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8f2a69
+	base = 0b1ee73
 	trimbase = 
 	parent = rpm/indigo/turtlebot_concert
-	previous = 
+	previous = a8f2a69
