--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.1-0": ["Fri May 08 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.0.2-0": ["Tue May 12 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"]}
+{"0.0.3-0": ["Tue Jul 28 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.0.1-0": ["Fri May 08 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"], "0.0.2-0": ["Tue May 12 2015", "Jihoon Lee", "jihoonlee.in@gmail.com"]}
